More Issue #244: some refactoring and further progress